Updted CSS to fix table in mobile view. removed display: block; and overflow-x: auto; from .generation-table

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1180,8 +1180,6 @@ grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
 
     .data-table,
     .generation-table {
-        display: block;
-        overflow-x: auto;
         -webkit-overflow-scrolling: touch;
     }
 
